--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -50,7 +50,7 @@
 //	  motion_blur: disabled
 //	  use_uber_shaders: auto:enabled
 //	  
-//	  -w 1152 -h 864 -novid -fullscreen -console +exec autoexec.cfg
+//	  -w 1440 -h 1080 -novid -fullscreen -console -threads 4 -high +exec autoexec.cfg
 // # # # # # # # # # # # # # # # # # # # # # # 
 
 echo "[-] loading autoexec.cfg..."
