--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -7,7 +7,7 @@
 //	    - Win+R: "desk.cpl"
 //			- click_on_monitor
 //			- open_advanced_display_Settings
-//			- set_screen_refresh_rate: 75hz    
+//			- set_screen_refresh_rate: 180hz    
 //	
 //	Windows_Mouse_Settings:
 //	  steps:
@@ -34,7 +34,7 @@
 //				- Low_Latency_Mode: Off
 //	
 //	In_Game_Settings:
-//	  resolution: "1920x1080"
+//	  resolution: "1440x1080"
 //	  display_mode: fullscreen
 //	  global_shadow_quality: low
 //	  model_texture_detail: medium
@@ -53,131 +53,82 @@
 //	  -w 1440 -h 1080 -novid -fullscreen -console -threads 4 -high +exec autoexec.cfg
 // # # # # # # # # # # # # # # # # # # # # # # 
 
+
+// # # # # # # # # # # # # # # # # # # # # # # 
+// GERAL
+// Configurações gerais e variáveis globais
+// # # # # # # # # # # # # # # # # # # # # # # 
 echo "[-] loading autoexec.cfg..."
 unbindall
-unbind 	"`"
-bind 	"`" 	"toggleconsole"
-bind 	"'" 	"toggleconsole"
+unbind "`"
+bind "`" "toggleconsole"
+bind "'" "toggleconsole"
 
-// [BASICS CONFIGS]
 sensitivity "0.675"
 zoom_sensitivity_ratio "0.5"
 fps_max "240"
 cl_autohelp "0"
 cl_sniper_delay_unscope "0"
 cl_sniper_auto_rezoom "false"
-cl_showloadout "true"
+cl_showloadout "1"
 cl_use_opens_buy_menu "0"
 cl_dm_buyrandomweapons "0"
 r_player_visibility_mode "1"
 r_drawparticles "1"
 install_dlc_workshoptools_cvar "1"
 
-// [INTERFACE]
+// # # # # # # # # # # # # # # # # # # # # # # 
+// HUD
+// Configurações do HUD e radar
+// # # # # # # # # # # # # # # # # # # # # # # 
 cl_hud_color "8"
 hud_scaling "1.2"
 cl_teammate_colors_show "1"
 cl_teamid_overhead_colors_show "true"
 cl_scoreboard_survivors_always_on "true"
 cl_showfps "0"
-cq_netgraph "0"
-cl_showloadout 1
-
-// [BINDS]
-alias "noclear" "bind w +forward; bind s +back; bind a +moveleft; bind d +moveright"
-bind "1" "slot1;+lookatweapon;-lookatweapon"
-bind "2" "slot2;+lookatweapon;-lookatweapon"
-bind "3" "slot3;+lookatweapon;-lookatweapon"
-bind "5" "slot5;+lookatweapon;-lookatweapon"    // C4
-bind "4" "slot6;+lookatweapon;-lookatweapon"    // Granade
-bind "f" "slot7;+lookatweapon;-lookatweapon"    // Flash   
-bind "c" "slot8;+lookatweapon;-lookatweapon"    // Smoke
-bind "x" "slot9;+lookatweapon;-lookatweapon"    // Decoy
-bind "z" "slot10;+lookatweapon;-lookatweapon"   // Molotov
-bind "a" "+left;clear"
-bind "s" "+back;clear"
-bind "w" "+forward;clear"
-bind "d" "+right;clear"
-bind "q" "lastinv;clear"
-bind "e" "+use;clear"
-bind "b" "buymenu"
-bind "CAPSLOCK" "+voicerecord"
-bind "g" "drop;clear"
-bind "mouse4" "drop"
-bind "i" "+lookatweapon"
-bind "m" "teammenu"
-bind "r" "+reload;clear"
-bind "t" "+spray_menu"
-bind "u" "messagemode2"
-bind "v" "+radialradio2"
-bind "y" "messagemode"
-bind "," "buyammo1"
-bind "." "buyammo2"
-bind "TAB" "+showscores"
-bind "ESCAPE" "cancelselect"
-bind "DEL" "mute"
-bind "SHIFT" "+sprint;clear"
-bind "CTRL" "+duck;clear"
-bind "F3" "autobuy"
-bind "F4" "rebuy"
-bind "F5" "jpeg"
-bind "F6" "save quick"
-bind "F7" "load quick"
-bind "F10" "cs_quit_prompt"
-bind "MOUSE1" "+attack;clear"
-bind "MOUSE2" "+attack2;clear"
-bind "MOUSE3" "player_ping"
-bind "SPACE" "+jump"
-bind "MWHEELDOWN" "+jump;clear"
-bind "MWHEELUP" "+lookatweapon"
-bind "MOUSE_X" "yaw"
-bind "MOUSE_Y" "pitch"
-
-// [CROSSHAIR]
-cl_crosshair_drawoutline "1"
-cl_crosshair_dynamic_maxdist_splitratio "0"
-cl_crosshair_dynamic_splitalpha_innermod "1"
-cl_crosshair_dynamic_splitalpha_outermod "0.3"
-cl_crosshair_dynamic_splitdist "5"
-cl_crosshair_friendly_warning "0"
-cl_crosshair_outlinethickness "0.5"
-cl_crosshair_sniper_show_normal_inaccuracy "0"
-cl_crosshair_sniper_width "1"
-cl_crosshair_t "0"
-cl_crosshairalpha "185"
-cl_crosshaircolor "5"
-cl_crosshaircolor_b "0"
-cl_crosshaircolor_g "255"
-cl_crosshaircolor_r "255"
-cl_crosshairdot "0"
-cl_crosshairgap "-2.5"
-cl_crosshairgap_useweaponvalue "0"
-cl_crosshairsize "1"
-cl_crosshairstyle "4"
-cl_crosshairthickness "0.5"
-cl_crosshairusealpha "1"
-cl_fixedcrosshairgap "-11"
-
-// [VIEW MODEL]
-viewmodel_fov "66.500000"
-viewmodel_offset_x "2.500000"
-viewmodel_offset_y "1.000000"
-viewmodel_offset_z "-2.000000"
-viewmodel_presetpos "0"
-cl_hud_color "4"
-cl_hud_radar_scale "1.100000"
-hud_scaling "0.900000"
 hud_showtargetid "1"
-cl_color "4"
 
-// [RADAR CONFIGS]
 cl_radar_always_centered "false"
 cl_radar_rotate "true"
 cl_hud_radar_scale "1.3"
 cl_radar_scale "0.3"
 cl_radar_square_with_scoreboard "true"
 
-// [SOUNDS]
+// # # # # # # # # # # # # # # # # # # # # # # 
+// VIEWMODEL
+// Configurações de exibição de armas
+// # # # # # # # # # # # # # # # # # # # # # # 
+viewmodel_fov "68"
+viewmodel_offset_x "-2"
+viewmodel_offset_y "-2"
+viewmodel_offset_z "-2"
+viewmodel_presetpos "0"
+cl_prefer_lefthanded "0"
+
+// # # # # # # # # # # # # # # # # # # # # # # 
+// CROSSHAIR
+// Configurações da mira
+// # # # # # # # # # # # # # # # # # # # # # # 
+cl_crosshairstyle "4"
+cl_crosshairsize "2"
+cl_crosshairthickness "1"
+cl_crosshairgap "-3"
+cl_crosshair_drawoutline "0"
+cl_crosshairdot "0"
+cl_crosshair_t "0"
+cl_crosshairusealpha "1"
+cl_crosshairalpha "255"
+cl_crosshair_recoil "0"
+cl_crosshairgap_useweaponvalue "0"
+cl_crosshaircolor "5"
+cl_crosshair_sniper_width "1"
+cl_crosshair_friendly_warning "0"
+
+// # # # # # # # # # # # # # # # # # # # # # # 
+// ÁUDIO
+// Configurações de áudio e som
+// # # # # # # # # # # # # # # # # # # # # # # 
 snd_headphone_eq "0"
 snd_spatialize_lerp "0"
 snd_steamaudio_enable_perspective_correction "true"
@@ -194,3 +145,58 @@ snd_deathcamera_volume "0"
 snd_mute_mvp_music_live_players "true"
 
 // # # # # # # # # # # # # # # # # # # # # # # 
+// BINDS
+// Configurações de teclas
+// # # # # # # # # # # # # # # # # # # # # # # 
+alias "noclear" "bind w +forward; bind s +back; bind a +moveleft; bind d +moveright"
+bind "1" "slot1;+lookatweapon;-lookatweapon"
+bind "2" "slot2;+lookatweapon;-lookatweapon"
+bind "3" "slot3;+lookatweapon;-lookatweapon"
+bind "4" "slot6;+lookatweapon;-lookatweapon"    // Granada
+bind "5" "slot5;+lookatweapon;-lookatweapon"    // C4
+bind "f" "slot7;+lookatweapon;-lookatweapon"    // Flash
+bind "c" "slot8;+lookatweapon;-lookatweapon"    // Smoke
+bind "x" "slot9;+lookatweapon;-lookatweapon"    // Decoy
+bind "z" "slot10;+lookatweapon;-lookatweapon"   // Molotov
+bind "a" "+left"
+bind "s" "+back"
+bind "w" "+forward"
+bind "d" "+right"
+bind "q" "lastinv"
+bind "e" "+use"
+bind "b" "buymenu"
+bind "CAPSLOCK" "+voicerecord"
+bind "g" "drop"
+bind "mouse4" "drop"
+bind "i" "+lookatweapon"
+bind "m" "teammenu"
+bind "r" "+reload"
+bind "t" "+spray_menu"
+bind "u" "messagemode2"
+bind "v" "+radialradio2"
+bind "y" "messagemode"
+bind "," "buyammo1"
+bind "." "buyammo2"
+bind "TAB" "+showscores"
+bind "ESCAPE" "cancelselect"
+bind "DEL" "mute"
+bind "SHIFT" "+sprint"
+bind "CTRL" "+duck"
+bind "F3" "autobuy"
+bind "F4" "rebuy"
+bind "F5" "jpeg"
+bind "F6" "save quick"
+bind "F7" "load quick"
+bind "F10" "cs_quit_prompt"
+bind "MOUSE1" "+attack"
+bind "MOUSE2" "+attack2"
+bind "MOUSE3" "player_ping"
+bind "SPACE" "+jump"
+bind "MWHEELDOWN" "+jump"
+bind "MWHEELUP" "+lookatweapon"
+bind "MOUSE_X" "yaw"
+bind "MOUSE_Y" "pitch"
+
+// # # # # # # # # # # # # # # # # # # # # # #
+// -w 1440 -h 1080 -novid -fullscreen -console -threads 4 -high +exec autoexec.cfg
+// # # # # # # # # # # # # # # # # # # # # # #
