--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,6 +1,5 @@
-// # # # # # # # # # # # # # # # # # # # # # # 
+// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 //	CSGO_Settings:
-//	  autoexec_path: "C:\Program Files (x86)\Steam\SteamApps\common\Counter-Strike Global Offensive\csgo\cfg\autoexec.cfg"
 //	
 //	Windows_Monitor_Refresh_Rate:
 //	  steps:
@@ -50,14 +49,12 @@
 //	  motion_blur: disabled
 //	  use_uber_shaders: auto:enabled
 //	  
-//	  -w 1440 -h 1080 -novid -fullscreen -console -threads 4 -high +exec autoexec.cfg
-// # # # # # # # # # # # # # # # # # # # # # # 
+//	  [-w 1440 -h 1080 -novid -fullscreen -console -threads 4 -high +exec autoexec.cfg]
+//
+// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
-
-// # # # # # # # # # # # # # # # # # # # # # # 
-// GERAL
-// Configurações gerais e variáveis globais
-// # # # # # # # # # # # # # # # # # # # # # # 
+// [GERAL]
+// (Configurações gerais e variáveis globais)
 echo "[-] loading autoexec.cfg..."
 unbindall
 unbind "`"
@@ -77,10 +74,8 @@ r_player_visibility_mode "1"
 r_drawparticles "1"
 install_dlc_workshoptools_cvar "1"
 
-// # # # # # # # # # # # # # # # # # # # # # # 
-// HUD
-// Configurações do HUD e radar
-// # # # # # # # # # # # # # # # # # # # # # # 
+// [HUD]
+// (Configurações do HUD e radar)
 cl_hud_color "8"
 hud_scaling "1.2"
 cl_teammate_colors_show "1"
@@ -95,10 +90,8 @@ cl_hud_radar_scale "1.3"
 cl_radar_scale "0.3"
 cl_radar_square_with_scoreboard "true"
 
-// # # # # # # # # # # # # # # # # # # # # # # 
-// VIEWMODEL
-// Configurações de exibição de armas
-// # # # # # # # # # # # # # # # # # # # # # # 
+// [VIEWMODEL]
+// (Configurações de exibição de armas)
 viewmodel_fov "68"
 viewmodel_offset_x "-2"
 viewmodel_offset_y "-2"
@@ -106,10 +99,8 @@ viewmodel_offset_z "-2"
 viewmodel_presetpos "0"
 cl_prefer_lefthanded "0"
 
-// # # # # # # # # # # # # # # # # # # # # # # 
-// CROSSHAIR
-// Configurações da mira
-// # # # # # # # # # # # # # # # # # # # # # # 
+// [CROSSHAIR]
+// (Configurações da mira)
 cl_crosshairstyle "4"
 cl_crosshairsize "2"
 cl_crosshairthickness "1"
@@ -125,10 +116,8 @@ cl_crosshaircolor "5"
 cl_crosshair_sniper_width "1"
 cl_crosshair_friendly_warning "0"
 
-// # # # # # # # # # # # # # # # # # # # # # # 
-// ÁUDIO
-// Configurações de áudio e som
-// # # # # # # # # # # # # # # # # # # # # # # 
+// [ÁUDIO]
+// (Configurações de áudio e som)
 snd_headphone_eq "0"
 snd_spatialize_lerp "0"
 snd_steamaudio_enable_perspective_correction "true"
@@ -144,10 +133,8 @@ snd_tensecondwarning_volume "0.25"
 snd_deathcamera_volume "0"
 snd_mute_mvp_music_live_players "true"
 
-// # # # # # # # # # # # # # # # # # # # # # # 
-// BINDS
-// Configurações de teclas
-// # # # # # # # # # # # # # # # # # # # # # # 
+// [BINDS]
+// (Configurações de teclas)
 alias "noclear" "bind w +forward; bind s +back; bind a +moveleft; bind d +moveright"
 bind "1" "slot1;+lookatweapon;-lookatweapon"
 bind "2" "slot2;+lookatweapon;-lookatweapon"
@@ -197,6 +184,4 @@ bind "MWHEELUP" "+lookatweapon"
 bind "MOUSE_X" "yaw"
 bind "MOUSE_Y" "pitch"
 
-// # # # # # # # # # # # # # # # # # # # # # #
-// -w 1440 -h 1080 -novid -fullscreen -console -threads 4 -high +exec autoexec.cfg
-// # # # # # # # # # # # # # # # # # # # # # #
+
