--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -112,7 +112,10 @@ cl_crosshairusealpha "1"
 cl_crosshairalpha "255"
 cl_crosshair_recoil "0"
 cl_crosshairgap_useweaponvalue "0"
-cl_crosshaircolor "5"
+cl_crosshaircolor_b "0";
+cl_crosshaircolor_r "255";
+cl_crosshaircolor_g "0";
+
 cl_crosshair_sniper_width "1"
 cl_crosshair_friendly_warning "0"
 
@@ -183,5 +186,3 @@ bind "MWHEELDOWN" "+jump"
 bind "MWHEELUP" "+lookatweapon"
 bind "MOUSE_X" "yaw"
 bind "MOUSE_Y" "pitch"
-
-
